# sparsex

./: .gitignore  AUTHORS  CONTRIBUTORS  COPYING  ChangeLog  INSTALL  LICENSE.txt  Makefile  Makefile.am  Makefile.old  NEWS  README  README.txt  REFACTORING  TODOS  calc_bits.c  configure.ac  cv.h  cv1.c  cv_simple.c  dmv.c  dmv_vec.h  dummy_sparse.py  dynarray.c  dynarray.h  elem.h  ext_prog.c  ext_prog.h  macros.h  matrix.c  method.c  method.h  mmf.c  mmf.h  mmf_drle.c  mmf_drle.py  mt_lib.c  mt_lib.h  phash.c  phash.h  (+61 more)
C-API/: Makefile  common.c  common.h  error.c  error.h  libcsx.h  main.c  mat.c  mat.h  mattype.h  vec.c  vec.h  vector.h
api/: Makefile  common.c  common.h  csr_example.c  error.c  error.h  libcsx.h  main.c  mat_vec.c  mat_vec.h  reordering_example.c  sparsex.h  timing.h  types.h
bandwidth/: reduce_bandwidth.cc  reduce_bandwidth.h
bench/: Makefile  bench.cc  bench.h  bench.hpp  bench_util.h  bench_util.hpp  libcsx_module.cc  libcsx_module.h  macros.h  main.cc  mkl_module.cc  mkl_module.h  mkl_module.hpp  mmf.h  mmf.hpp  poski_module.cc  poski_module.cpp  poski_module.h  poski_module.hpp  sparsex_module.cc  sparsex_module.h  sparsex_module.hpp  timer.cc  timer.h  timer.hpp
cg/: Makefile  cg.c  cg.cc  cg.h  cg_vector.c  cg_vector.cc  cg_vector.h  main.c  main.cc  test.matrix  test2.matrix
cpu/: Makefile  cache_bytes.sh  cl_bytes.sh  cpu_info.sh  cpu_mhz.sh  cpuid.c  hwpfetch.c
csx/: Affinity.cpp  Affinity.hpp  Allocators.hpp  Barrier.cpp  Barrier.hpp  Compiler.cpp  Compiler.hpp  Csr.hpp  CsrIterator.hpp  Csx.hpp  CsxBench.cpp  CsxBench.hpp  CsxBuild.cc  CsxBuild.cpp  CsxBuild.hpp  CsxGetSet.h  CsxGetSet.hpp  CsxManager.h  CsxManager.hpp  CsxMatvec.cc  CsxMatvec.cpp  CsxMatvec.hpp  CsxSaveRestore.h  CsxSaveRestore.hpp  CsxSpmvMt.cc  CsxSpmvMt.cpp  CsxSpmvMt.hpp  CsxUtil.cpp  CsxUtil.h  CsxUtil.hpp  CtlBuilder.cc  CtlBuilder.cpp  CtlBuilder.h  CtlBuilder.hpp  CtlUtil.hpp  Ctl_ll.hpp  Delta.hpp  DynamicArray.cc  DynamicArray.hpp  DynamicArrayTest.cpp  (+149 more)
doc/: Doxyfile.api.in  Doxyfile.devel.in  Makefile.am
include/: Makefile.am
include/sparsex/: common.h  config.h.in  error.h  mat_vec.h  matvec.h  sparsex.h  timing.h  types.h  version.h.in
include/sparsex/internals/: Affinity.hpp  Allocators.hpp  Barrier.hpp  CodeExecutor.hpp  Compiler.hpp  Config.hpp.in  Config.hpp.install  Csr.hpp  CsrIterator.hpp  Csx.hpp  CsxBench.hpp  CsxBuild.hpp  CsxGetSet.hpp  CsxJit.hpp  CsxKernels.hpp  CsxManager.hpp  CsxMatvec.hpp  CsxSaveRestore.hpp  CsxSpmv.hpp  CsxUtil.hpp  CtlBuilder.hpp  CtlUtil.hpp  Delta.hpp  DynamicArray.hpp  Element.hpp  EncodingManager.hpp  Encodings.hpp  Facade.hpp  Jit.hpp  JitCompiler.hpp  JitConfig.hpp  JitUtil.hpp  Map.hpp  Mmf.hpp  Node.hpp  Rcm.hpp  Runtime.hpp  SparseInternal.hpp  SparseMatrix.hpp  SparsePartition.hpp  (+17 more)
include/sparsex/internals/logger/: Logger.hpp  LoggerUtil.hpp  OutputPolicy.hpp
jit/: Makefile  crsvh.c  crsvh.h  crsvh_spmv_template.c  spmv_vhjit_check.c  spmv_vhjit_mt.c  spmv_vhjit_mt_check.c  vh_jit.cpp  vh_jit.h
lib/: common.h
m4check/: ax_check_boost.m4  ax_check_icu.m4  ax_check_llvm.m4  ax_check_mkl.m4  ax_check_prog.m4  ax_compilers.m4  ax_platforms.m4  ax_prog_doxygen.m4  ax_utility.m4  compilers.m4  doxygen_rules.am  platforms.m4  verbose_rules.am
old/: beanbag.c  beanbag.h
patterns/: Makefile  compile.sh  csx.cc  csx.h  csx_llvm_tmpl.c  ctl.cc  ctl.h  ctl_ll.h  ctl_llvm_tmpl.c  draw.cc  draw.h  drle.cc  drle.h  drle_shell.cc  drle_stats.cc  drle_test.cc  jit.cc  jit.h  llvm_jit_help.cc  llvm_jit_help.h  mmf.cc  mmf.h  run_all.sh  run_tests.sh  spm.cc  spm.h  spm_csx.cc  spmv.cc
prfcnt/: Makefile  README  prfcnt-test.c  prfcnt.h  prfcnt_amd.h  prfcnt_common.h  prfcnt_core.h  prfcnt_simple.h  prfcnt_xeon.h  tsc-exec.c  tsc.h
python/: Makefile  cg.py  crs.py  crs_helpers.py  cv_vidx.py  debug.py  delta.py  delta_cv.py  delta_helpers.py  delta_mt.py  delta_mt_check.py  delta_parse.py  delta_sizes.py  detect_row_holes.py  dummy_sparse.py  hfreq_bdb.py  idx_list.py  mmf.py  progress.py  pyspm.c  range_merge.py  remove_row_holes.py  runall.sh  setup.py  svn_rev.py  toplist.py  toprows.py  vals_freq.py  vals_freq_stats.py  vals_freq_top.py  vals_idx.py
scripts/: ALL-clone.sh  ALL-nehelam.sh  Makefile  Makefile.am  bcsr32_run_clone.sh  cl_bytes.sh  (+35 more)
src/: Makefile.am
src/api/: Makefile.am  common.c  error.c  mat_vec.c  matvec.c
src/bench/: Bench.cpp  Bench.hpp  BenchUtil.hpp  Makefile  Makefile.am  MklModule.cpp  MklModule.hpp  Mmf.hpp  PoskiModule.cpp  PoskiModule.hpp  SparsexModule.cpp  SparsexModule.hpp  Timer.cpp  Timer.hpp  bench.cpp  main.cpp  mkl_module.cpp  sparsex_module.cpp  sparsex_module.hpp  timer.cpp
src/examples/: Makefile  Makefile.am  advanced_example.c  csr_example.c  matrix_caching_example_p1.c  matrix_caching_example_p2.c  mmf_example.c  reordering_example.c
src/examples/examples/: mmf_example.c
src/internals/: Affinity.cpp  Barrier.cpp  CodeExecutor.cpp  Compiler.cpp  CsxBench.cpp  CsxBuild.cpp  CsxKernels.cpp  CsxMatvec.cpp  CsxSpmv.cpp  CsxUtil.cpp  CtlBuilder.cpp  Encodings.cpp  Facade.cpp  Jit.cpp  JitCompiler.cpp  JitUtil.cpp  Makefile.am  Mmf.cpp  Node.cpp  Runtime.cpp  Statistics.cpp  TemplateText.cpp  ThreadPool.cpp  Timer.cpp  TimerCollection.cpp  TimerTest.cpp  Vector.cpp  futex.c  numa_util.c
src/internals/logger/: Logger.cpp  OutputPolicy.cpp
src/templates/: Makefile.am  block_col_one_tmpl.c  block_col_sym_tmpl.c  block_col_tmpl.c  block_row_one_tmpl.c  block_row_sym_tmpl.c  block_row_tmpl.c  csx_spmv_tmpl.c  csx_sym_spmv_tmpl.c  delta_sym_tmpl.c  delta_tmpl.c  diag_sym_tmpl.c  diag_tmpl.c  horiz_sym_tmpl.c  horiz_tmpl.c  rdiag_sym_tmpl.c  rdiag_tmpl.c  vert_sym_tmpl.c  vert_tmpl.c
test/: Makefile.am
test/matrices/: Makefile.am  demopatt.mtx.unsorted  symmetric.mtx.sorted  test.mtx.sorted  test2.mtx.sorted  test3.mtx.sorted
test/scripts/: test-sparsex.sh.in
test/src/: BinaryTest_p1.cpp  BinaryTest_p2.cpp  CsxBench.cpp  CsxBench.hpp  CsxCheck.cpp  CsxCheck.hpp  DynamicArrayTest.cpp  ElementTest.cpp  Makefile.am  SpmvTest.cpp  TimerTest.cpp  sparsex_test.c
(+184 files in other folders)
