#
# Makefile.am -- Necessary rules for auto-generating project's documentation.
#
# Copyright (C) 2014, Computing Systems Laboratory (CSLab), NTUA
# Copyright (C) 2014, Vasileios Karakasis
# All righrs reserved
#
# This file is distributed under the BSD License. See LICENSE.txt for details.
# 

AM_DEFAULT_VERBOSITY = 0

include $(top_srcdir)/m4check/doxygen_rules.am
