#
# Makefile.am -- 
#
# Copyright (C) 2014, Computing Systems Laboratory (CSLab), NTUA
# Copyright (C) 2014, Vasileios Karakasis
# All righrs reserved.
#
# This file is distributed under the BSD License. See LICENSE.txt for details.
#

AM_DEFAULT_VERBOSITY = 0
SUBDIRS = internals templates api examples

if SPX_BUILD_BENCH
SUBDIRS += bench
endif
