#
# Makefile.am -- 
#
# Copyright (C) 2014, Computing Systems Laboratory (CSLab), NTUA
# Copyright (C) 2014, Vasileios Karakasis
# All righrs reserved.
#
# This file is distributed under the BSD License. See LICENSE.txt for details.
#

AM_DEFAULT_VERBOSITY = 0

templatesdir = $(datarootdir)/sparsex/templates
dist_templates_DATA = \
	block_col_one_tmpl.c \
	block_col_sym_tmpl.c \
	block_col_tmpl.c \
	block_row_one_tmpl.c \
	block_row_sym_tmpl.c \
	block_row_tmpl.c \
	csx_llvm_tmpl.c \
	csx_spmv_tmpl.c \
	csx_sym_spmv_tmpl.c \
	delta_sym_tmpl.c \
	delta_tmpl.c \
	diag_sym_tmpl.c \
	diag_tmpl.c \
	horiz_sym_tmpl.c \
	horiz_tmpl.c \
	rdiag_sym_tmpl.c \
	rdiag_tmpl.c \
	vert_sym_tmpl.c \
	vert_tmpl.c
