#
# Makefile.am -- Test matrices
#
# Copyright (C) 2014, Computing Systems Laboratory (CSLab), NTUA
# Copyright (C) 2014, Vasileios Karakasis
# All righrs reserved.
#
# This file is distributed under the BSD License. See LICENSE.txt for details.
#

AM_DEFAULT_VERBOSITY = 0

dist_noinst_DATA = \
	demopatt.mtx.sorted \
	demopatt.mtx.unsorted \
	symmetric.mtx.sorted \
	symmetric-very-sparse.mtx.sorted